cmake_minimum_required(VERSION 3.15)
project(CPlusPlusSTLByLiupeng)

set(CMAKE_CXX_STANDARD 17)



add_executable(CPlusPlusSTLByLiupeng main.cpp StringByLiuPeng/StringByLiuPeng.cpp StringByLiuPeng/StringByLiuPeng.h Function/strlen/AboutStrlen.cpp Function/strlen/AboutStrlen.h Function/memset/AboutMemset.cpp Function/memset/AboutMemset.h Function/strcat/AboutStrcat.cpp Function/strcat/AboutStrcat.h)