cmake_minimum_required(VERSION 3.15)
project(CPlusPlusSTLByLiupeng)

set(CMAKE_CXX_STANDARD 17)



add_executable(CPlusPlusSTLByLiupeng main.cpp StringByLiuPeng/StringByLiuPeng.cpp StringByLiuPeng/StringByLiuPeng.h Function/strlen/AboutStrlen.cpp Function/strlen/AboutStrlen.h Function/memset/AboutMemset.cpp Function/memset/AboutMemset.h Function/strcat/AboutStrcat.cpp Function/strcat/AboutStrcat.h Function/auto/AboutAuto.cpp Function/auto/AboutAuto.h Function/bind/AboutBind.cpp Function/bind/AboutBind.h Function/for/AboutFor.cpp Function/for/AboutFor.h Function/decltype/AboutDecltype.cpp Function/decltype/AboutDecltype.h RedisByLiupeng/ItemType/IntType/IntType.cpp RedisByLiupeng/ItemType/IntType/IntType.h RedisByLiupeng/ItemType/DoubleType/DoubleType.cpp RedisByLiupeng/ItemType/DoubleType/DoubleType.h RedisByLiupeng/ItemType/StringType/StringType.cpp RedisByLiupeng/ItemType/StringType/StringType.h RedisByLiupeng/ItemType/DateType/DateByLiuPeng/DateByLiupeng.cpp RedisByLiupeng/ItemType/DateType/DateByLiuPeng/DateByLiupeng.h)